--- a/lyceum/templates/includes/footer.html
+++ b/lyceum/templates/includes/footer.html
@@ -1,8 +1,8 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+<script src="{% static 'js/footer_year.js' %}"></script>
 
 <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
-  <div class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
-      <p>©2023</p>
+  <div id="footer_content" class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
   </div>
 </footer>
