--- a/lyceum/templates/includes/header.html
+++ b/lyceum/templates/includes/header.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 {% load static %}
 {% with request.resolver_match.view_name as view_name %}
 <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
@@ -8,19 +9,19 @@
                 <li class="nav-item">
                     <a class="nav-link {% if view_name == 'homepage:home' %} active {% endif %}"
                        href="{% url 'homepage:home' %}">
-                        На главную
+                        {% trans "To main" %}
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link {% if view_name == 'about:description' %} active {% endif %}"
                        href="{% url 'about:description' %}">
-                        О проекте
+                        {% trans "About" %}
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link {% if view_name == 'catalog:item_list' %} active {% endif %}"
                        href="{% url 'catalog:item_list' %}">
-                        Список товаров
+                        {% trans "List of products" %}
                     </a>
                 </li>
             </ul>
