added default year

--- a/lyceum/templates/includes/footer.html
+++ b/lyceum/templates/includes/footer.html
@@ -3,6 +3,9 @@
 <script src="{% static 'js/footer_year.js' %}"></script>
 
 <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
-  <div id="footer_content" class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
-  </div>
+    <div id="footer_content" class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
+        <noscript>
+            <p>2023</p>
+        </noscript>
+    </div>
 </footer>
