--- a/lyceum/templates/base.html
+++ b/lyceum/templates/base.html
@@ -35,7 +35,7 @@
     </main>
 
     <footer>
-        {% include "includes/footer.html" %}
+        {% include "includes/footer.html" with server_time=server_time only %}
     </footer>
 </body>
 </html>
