--- a/lyceum/templates/includes/footer.html
+++ b/lyceum/templates/includes/footer.html
@@ -5,7 +5,7 @@
 <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
     <div id="footer_content" class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
         <noscript>
-            <p>2023</p>
+            <p>{{ server_time }}</p>
         </noscript>
     </div>
 </footer>
