--- a/lyceum/templates/includes/footer.html
+++ b/lyceum/templates/includes/footer.html
@@ -1,11 +1,22 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
-<script src="{% static 'js/footer_year.js' %}"></script>
 
 <footer class="bd-footer py-4 py-md-5 mt-5 bg-body-tertiary">
     <div id="footer_content" class="container py-4 py-md-5 px-4 px-md-3 text-body-secondary">
+        <script>
+              var year = new Date().getFullYear();
+              var serverTime = "{{ server_time }}";
+              var footer = document.getElementById("footer_content");
+              var timeDiff = Math.abs((new Date(serverTime)).getTime() - (new Date(year)).getTime());
+              if (timeDiff == 0) {
+                footer.innerHTML = year;
+              }
+              else {
+                footer.innerHTML = serverTime;
+              }
+        </script>
         <noscript>
-            <p>{{ server_time }}</p>
+            <p id="server_time">{{ server_time }}</p>
         </noscript>
     </div>
 </footer>
