--- a/lyceum/templates/base.html
+++ b/lyceum/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ru" data-bs-theme="dark">
 <head>
 
     <meta charset="utf-8">
@@ -27,11 +27,7 @@
     </header>
 
     <main>
-        <div class="container" data-bs-theme="dark">
-            <div class="p-3 mb-2 bg-dark text-white">
-                {% block content %} {% endblock %}
-            </div>
-        </div>
+        {% block content %} {% endblock %}
     </main>
 
     <footer>
