--- a/lyceum/templates/homepage/homepage.html
+++ b/lyceum/templates/homepage/homepage.html
@@ -5,5 +5,14 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
 
-Главная
+
+<div class="container my-5">
+    <div class="bg-body-tertiary p-5 rounded">
+        <div class="col-sm-8 py-5 mx-auto">
+            <h1 class="display-5 fw-normal">Главная страница проекта</h1>
+            <p class="fs-5">Django project</p>
+        </div>
+    </div>
+</div>
+
 {% endblock %}
