--- a/lyceum/templates/homepage/homepage.html
+++ b/lyceum/templates/homepage/homepage.html
@@ -9,8 +9,8 @@
 <div class="container my-5">
     <div class="bg-body-tertiary p-5 rounded">
         <div class="col-sm-8 py-5 mx-auto">
-            <h1 class="display-5 fw-normal">Главная страница проекта</h1>
-            <p class="fs-5">Django project</p>
+            <h1 class="display-5 fw-normal">Главная страница</h1>
+            <p class="fs-5">Вы можете перейти в список товаров и посмотреть информацию о проекте.</p>
         </div>
     </div>
 </div>
