--- a/lyceum/templates/catalog/item_list.html
+++ b/lyceum/templates/catalog/item_list.html
@@ -8,9 +8,19 @@
 Список элементов
 
 <div class="row">
-  {% for item in items %}
-    {% include "includes/item_card.html" with item=item only %}
-  {% endfor %}
+    {% for item in items %}
+        {% include "includes/item_card.html" with item=item only %}
+    {% endfor %}
+    {% if not items%}
+        <div class="container my-5">
+            <div class="bg-body-tertiary p-5 rounded">
+                <div class="col-sm-8 py-5 mx-auto">
+                    <h1 class="display-5 fw-normal">Товары отсутствуют в каталоге</h1>
+                    <p class="fs-5">Подождите пока товары появятся.</p>
+                </div>
+            </div>
+        </div>
+    {% endif %}
 </div>
 
 {% endblock %}
