--- a/lyceum/templates/includes/item_card.html
+++ b/lyceum/templates/includes/item_card.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <div class="col-sm-3">
     <div class="card">
         {% load thumbnail %}
@@ -8,7 +9,7 @@
         <div class="card-body">
             <h5 class="card-title">{{ item.name }}</h5>
             <p class="card-text">{{ item.text }}</p>
-            <a href="{% url 'catalog:item_detail' item_index=item.id %}" class="btn btn-primary">Info</a>
+            <a href="{% url 'catalog:item_detail' item_index=item.id %}" class="btn btn-primary">{% trans "More details" %}</a>
         </div>
     </div>
 </div>
